--- a/about.html
+++ b/about.html
@@ -1,91 +1,190 @@
+<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About the Author</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named style.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About — My Oceanic Odyssey</title>
 
+  <meta name="description" content="About Drew Burrier — oceanographer, data scientist, and paddler behind My Oceanic Odyssey." />
+
+  <!-- Shared fonts/vendor CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Your shared site stylesheet -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<!-- Google tag (gtag.js) -->
+
+<!-- GA -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKS4VZRVKZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZKS4VZRVKZ');
+  function gtag(){dataLayer.push(arguments)}
+  gtag('js', new Date()); gtag('config', 'G-ZKS4VZRVKZ');
 </script>
+
 <body>
-    <div class="content-wrapper">
-    <div class="top-banner">
-            <div class="top-content">
-                <h1>My Oceanic Odyssey</h1>
-                <nav>
-                    <!-- Placeholder links for a bio -->
-                    <a href="index.html">Main Page</a>
-                    <a href="introduction.html">Introduction</a>
-                    <a href="support.html">SUPport</a>
-                </nav>
-            </div>
-           <!-- <img src="photos/top_banner.jpeg" alt="Banner Image"> -->
-        </div>
+  <!-- Shared ocean backdrop -->
+  <div class="ocean-bg" aria-hidden="true"></div>
+  <div class="ocean-noise" aria-hidden="true"></div>
 
-    <div class="content">
-        <div class="author-profile">
-            <img src="photos/author.jpeg" alt="Author" class="author-image"> <!-- Centered author image -->
-            <p class="author-description">
-                <!-- Your text about the author goes here -->
-               Drew Burrier holds a Master's Degree in Marine Science with a concentration in physical oceanography from Moss Landing Marine Laboratories, where he delved deep into the mysteries of the ocean's movements and its intricate relationship with the broader Earth system. Transitioning from academia to practical application, Drew has applied his vast knowledge and analytical skills as a data scientist and engineer. His work spans a variety of challenging environments: numerical weather simulation, environmental protection, and humanitarian assistance and disaster relief. 
+  <!-- Shared header -->
+  <header class="site-header">
+    <button class="hamburger" id="hamburger" aria-label="Open menu" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
 
-               Living in Honolulu, Drew is immersed in his passions: the sea, an analytical and creative approach to the world, and the serene beauty of island life. With his unique background in marine science and expertise in data science and engineering, Drew is excited to apply his technical and scientific skillset to this new adventure in creative expression. When he's not immersed in data or exploring the depths of the ocean, Drew enjoys skiing, surfing, hiking, and sucking the marrow out of life.
+    <a class="brand" href="index.html" aria-label="My Oceanic Odyssey">
+      <svg class="brand-icon" viewBox="0 0 64 64" aria-hidden="true">
+        <path d="M14,40 C10,36 8,32 10,28 c2-4 6-7 10-9 c5-2 11-3 16-1 c4,2 7,5 9,9 c2,4 2,8 0,11 c-2,3 -6,5 -10,6 c-5,1 -10,1 -15-1 c-3-1 -5-2 -6-3 z"
+              fill="none" vector-effect="non-scaling-stroke" />
+      </svg>
+      <span class="brand-text">My Oceanic Odyssey</span>
+    </a>
 
-            </p>
-        </div>
+    <nav class="main-nav">
+      <a href="introduction.html">Introduction</a>
+      <a href="science.html">Science</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="support.html">Support</a>
+      <a href="about.html" aria-current="page">About</a>
+    </nav>
+  </header>
+
+  <!-- Shared drawer (your updated link set) -->
+  <aside id="drawer" class="drawer" role="dialog" aria-modal="true" aria-label="Site menu" hidden>
+    <div class="drawer-header">
+      <strong>Navigate</strong>
+      <button class="drawer-close" id="drawerClose" aria-label="Close menu">&times;</button>
     </div>
+
+    <div class="drawer-section">
+      <a href="introduction.html">Introduction</a>
+      <a href="about.html" aria-current="page">About the Author</a>
+      <a href="landing.html">Landing Page</a>
+      <a href="science.html">Open Oceanography</a>
+      <a href="gallery.html">Photo Map</a>
+      <a href="freelance.html">Work With Me</a>
+      <a class="sponsor-cta" href="support.html">Sponsor the Journey</a>
     </div>
+  </aside>
+  <div id="backdrop" class="backdrop" hidden></div>
+
+  <!-- Main -->
+  <main class="wrap">
+    <!-- Shared hero card style -->
+    <section class="card intro-hero">
+      <div class="intro-hero__content">
+        <h1>About Drew</h1>
+        <p class="lead">
+          Physical oceanography meets field craft, data, and storytelling — a life built around blue water.
+        </p>
+      </div>
+    </section>
+
+    <!-- Profile/content card using shared utilities (prose, avatar, grid) -->
+    <section class="card about-body">
+      <div class="profile-grid">
+        <figure class="profile-photo">
+          <img class="avatar" src="photos/author.jpeg" alt="Portrait of Drew Burrier" />
+          <figcaption class="muted">Honolulu, Hawaiʻi</figcaption>
+        </figure>
+
+        <div class="prose">
+          <p>
+            Drew Burrier holds a Master’s degree in Marine Science (physical oceanography) from Moss Landing Marine
+            Laboratories. His work has spanned numerical weather simulation, environmental protection, and humanitarian
+            assistance and disaster relief — always at the intersection of data and the real world.
+          </p>
+          <p>
+            Now based in Honolulu, Drew blends analysis with adventure. My Oceanic Odyssey is where those threads meet:
+            long days on the water, open tools and datasets, and essays about the kind of learning that only happens
+            between wind and swell.
+          </p>
+          <p>
+            When he’s not paddling or building maps, you’ll find him surfing, hiking, skiing, and generally squeezing
+            the most out of island life.
+          </p>
+
+          <div class="intro-cta">
+            <a class="btn" href="index.html">Back to the live map</a>
+            <a class="btn btn-outline" href="gallery.html">View the Photo Map</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Shared footer -->
+  <footer class="site-footer">
+    <div class="social">
+      <a aria-label="Instagram" href="https://www.instagram.com/drewski1003" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a aria-label="Medium" href="https://medium.com/my-oceanic-odyssey" target="_blank"><i class="fab fa-medium"></i></a>
+      <a aria-label="Substack" href="https://substack.com/@drewburrier" target="_blank"><i class="fas fa-newspaper"></i></a>
+      <a aria-label="LinkedIn" href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a aria-label="Spotify" href="https://open.spotify.com/user/12148616871" target="_blank"><i class="fab fa-spotify"></i></a>
+    </div>
+    <div class="legal">© My Oceanic Odyssey</div>
+  </footer>
+
+  <!-- Shared drawer controls (same as other pages) -->
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const hamburger = document.getElementById('hamburger');
+      const drawer    = document.getElementById('drawer');
+      const closeBtn  = document.getElementById('drawerClose');
+      const backdrop  = document.getElementById('backdrop');
+      const main      = document.querySelector('main');
+      const footer    = document.querySelector('footer');
+
+      let lastFocused = null;
+
+      function setInert(on) {
+        if (on) { main?.setAttribute('inert',''); footer?.setAttribute('inert',''); }
+        else    { main?.removeAttribute('inert'); footer?.removeAttribute('inert'); }
+      }
+
+      function openDrawer() {
+        lastFocused = document.activeElement;
+        drawer.hidden = false;
+        backdrop.hidden = false;
+        drawer.classList.add('open');
+        setInert(true);
+        hamburger.setAttribute('aria-expanded','true');
+        closeBtn.focus();
+        document.addEventListener('keydown', trapFocus);
+      }
+
+      function closeDrawer() {
+        (lastFocused || hamburger).focus();
+        drawer.classList.remove('open');
+        drawer.hidden = true;
+        backdrop.hidden = true;
+        setInert(false);
+        hamburger.setAttribute('aria-expanded','false');
+        document.removeEventListener('keydown', trapFocus);
+      }
+
+      function trapFocus(e) {
+        if (e.key !== 'Tab' || drawer.hidden) return;
+        const focusables = drawer.querySelectorAll(
+          'a[href], button:not([disabled]), textarea, input, select, [tabindex]:not([tabindex="-1"])'
+        );
+        if (!focusables.length) return;
+        const first = focusables[0];
+        const last  = focusables[focusables.length - 1];
+        if (e.shiftKey && document.activeElement === first) { e.preventDefault(); last.focus(); }
+        else if (!e.shiftKey && document.activeElement === last) { e.preventDefault(); first.focus(); }
+      }
+
+      hamburger.addEventListener('click', openDrawer);
+      closeBtn.addEventListener('click', closeDrawer);
+      backdrop.addEventListener('click', closeDrawer);
+      document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeDrawer(); });
+    });
+  </script>
 </body>
-      <!-- Bottom Banner -->
-<div class="banner">
-    <div class="hamburger-menu" onclick="toggleMenu()">
-        &#9776; <!-- Hamburger Icon -->
-    </div>
-    <div id="planning-tools" class="planning-tools">
-        <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
-       
-        <div class="links-container">
-            <h2>Open Oceanography</h2>
-            <a href="science.html">Main Page</a>
-            <h2>Photo Gallery</h2>
-             <a href="gallery.html">Photo Map</a> <!-- New link to the gallery -->
-             <h2>Planning Tools</h2>
-            <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
-            <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
-        </div>
-    </div>
-     <div class="social-media-links">
-            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://medium.com/my-oceanic-odyssey" target="_blank" aria-label="Medium">
-            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
-            </a>
-
-            <a href="https://substack.com/@drewburrier" target="_blank" aria-label="Substack">
-            <i class="fas fa-newspaper"></i>  <!-- Replace with an appropriate Substack icon if needed -->
-            </a>
-            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <!--  <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
-                <i class="fab fa-strava"></i>
-            </a> -->
-             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
-                <i class="fab fa-spotify"></i>
-            </a>
-
-        </div>
-</div>
-
-
+</html>
