--- a/introduction.html
+++ b/introduction.html
@@ -1,102 +1,228 @@
+<!-- introduction.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About the Author</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file name is correct -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Introduction — My Oceanic Odyssey</title>
+
+  <meta name="description" content="Start here: why paddle Oʻahu? The vision behind My Oceanic Odyssey and how to follow along." />
+
+  <!-- Fonts & vendor CSS (same as index) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- Your site CSS (same file as index) -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<!-- Google tag (gtag.js) -->
+
+<!-- GA (unchanged) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKS4VZRVKZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZKS4VZRVKZ');
+  function gtag(){dataLayer.push(arguments)}
+  gtag('js', new Date()); gtag('config', 'G-ZKS4VZRVKZ');
 </script>
+
 <body>
-    <div class="content-wrapper">
-        <div class="top-banner">
-            <div class="top-content">
-                <h1>My Oceanic Odyssey</h1>
-                <nav>
-                    <!-- Placeholder links for a bio -->
-                    <a href="index.html">Main Page</a>
-                    <a href="about.html">About the Author</a>
-                    <a href="support.html">SUPport</a>
-                </nav>
-            </div>
-            <!-- <img src="photos/top_banner.jpeg" alt="Banner Image"> -->
+  <!-- Ocean backdrop layers -->
+  <div class="ocean-bg" aria-hidden="true"></div>
+  <div class="ocean-noise" aria-hidden="true"></div>
 
-        </div>
-        <div class="content">
-            <div class="author-profile">
-                <div class="introduction-photos">
-                    <img src="photos/introduction_1.jpg" alt="Author" class="introduction-photos"> <!-- Centered author image -->
-                    <p class="author-description">
-                    <!-- Your text about the author goes here -->
-                  Welcome aboard! Here, we embark on a thrilling adventure with Drew, a data scientist and oceanographer, as he sets out to accomplish a challenging endeavor: circumnavigating the island of Oahu on a paddle board. Beyond the physical endurance required for such an adventure, Drew's journey serves as a catalyst for profound self-discovery. Through the highs and lows of this expedition, he seeks to uncover deeper truths about himself and the world around him, sharing his reflections and insights along the way. Moreover, this mission extends beyond mere documentation; we aspire to push the boundaries of storytelling by integrating data and educational elements into our narrative. Join us as we explore the intersection of adventure, personal growth, and innovative storytelling, inspiring curiosity and discovery with every stroke of the paddle.<br><br>
-                  Click the link below to read the Full Introduction on Medium.com
+  <!-- Header (same as index, no standalone Sponsor button) -->
+  <header class="site-header">
+    <button class="hamburger" id="hamburger" aria-label="Open menu" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
 
-                </p>
-                    <a href="https://medium.com/@drew.burrier/my-oceanic-odyssey-new-beginnings-a6ffd4f60d44" target="_blank" class="link-button">Read Introduction on Medium</a>
-                    <img src="photos/introduction_2.jpeg" alt="Author" class="introduction-photos"> <!-- Second image -->
-                </div>
-                <p class="author-description">
-                    <!-- Your text about the author goes here -->
-                </p>
-            </div>
-        </div>
+    <a class="brand" href="index.html" aria-label="My Oceanic Odyssey">
+      <!-- Inline Oʻahu trace logo -->
+      <svg class="brand-icon" viewBox="0 0 64 64" aria-hidden="true">
+        <path d="M14,40
+                 C10,36 8,32 10,28
+                 c2-4 6-7 10-9
+                 c5-2 11-3 16-1
+                 c4,2 7,5 9,9
+                 c2,4 2,8 0,11
+                 c-2,3 -6,5 -10,6
+                 c-5,1 -10,1 -15-1
+                 c-3-1 -5-2 -6-3 z"
+              fill="none" vector-effect="non-scaling-stroke" />
+      </svg>
+      <span class="brand-text">My Oceanic Odyssey</span>
+    </a>
+
+    <nav class="main-nav">
+      <a href="introduction.html" aria-current="page">Introduction</a>
+      <a href="science.html">Science</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="support.html">Support</a>
+      <a href="about.html">About</a>
+    </nav>
+  </header>
+
+  <!-- Drawer (same link set as index; Sponsor lives here) -->
+  <aside id="drawer" class="drawer" role="dialog" aria-modal="true" aria-label="Site menu" hidden>
+    <div class="drawer-header">
+      <strong>Navigate</strong>
+      <button class="drawer-close" id="drawerClose" aria-label="Close menu">&times;</button>
     </div>
+
+    <div class="drawer-section">
+      <a href="introduction.html">Introduction</a>
+      <a href="about.html">About the Author</a>
+      <a href="landing.html">Landing Page</a>
+      <a href="science.html">Open Oceanography</a>
+      <a href="gallery.html">Photo Map</a>
+      <a href="freelance.html">Work With Me</a>
+      <a class="sponsor-cta" href="support.html">Sponsor the Journey</a>
+    </div>
+    
+    <div class="drawer-section">
+      <h3>Planning Tools</h3>
+      <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank" rel="noopener">Windy.com</a>
+      <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank" rel="noopener">Google Earth</a>
+    </div>
+
+    <div class="drawer-section">
+      <h3>Follow</h3>
+      <div class="drawer-social">
+        <a aria-label="Instagram" href="https://www.instagram.com/drewski1003" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a aria-label="Medium" href="https://medium.com/my-oceanic-odyssey" target="_blank"><i class="fab fa-medium"></i></a>
+        <a aria-label="Substack" href="https://substack.com/@drewburrier" target="_blank"><i class="fas fa-newspaper"></i></a>
+        <a aria-label="LinkedIn" href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a aria-label="Spotify" href="https://open.spotify.com/user/12148616871" target="_blank"><i class="fab fa-spotify"></i></a>
+      </div>
+    </div>
+  </aside>
+  <div id="backdrop" class="backdrop" hidden></div>
+
+  <!-- MAIN -->
+  <main class="wrap">
+    <!-- Oceanic hero card -->
+    <section class="card intro-hero">
+      <div class="intro-hero__content">
+        <h1>New Beginnings</h1>
+        <p class="lead">
+          A data scientist and oceanographer sets out to circumnavigate Oʻahu on a paddle board —
+          blending endurance, storytelling, and open science into a single living expedition.
+        </p>
+        <a class="btn btn-sun" href="https://medium.com/@drew.burrier/my-oceanic-odyssey-new-beginnings-a6ffd4f60d44" target="_blank" rel="noopener">
+          Read the full introduction on Medium
+          <i class="fa-solid fa-arrow-up-right-from-square" aria-hidden="true"></i>
+        </a>
+      </div>
+    </section>
+
+    <!-- Story + images -->
+    <section class="card intro-body">
+      <div class="prose">
+        <p>
+          Welcome aboard. This project follows Drew’s bid to paddle around Oʻahu — not only to trace a line on the map,
+          but to explore the currents between adventure and meaning. The route is real, the conditions are real,
+          and so is the reflection that comes from long hours over blue water.
+        </p>
+        <p>
+          The Odyssey also opens the science: wind, swell, currents, and wildlife sightings feed into shared tools and
+          visualizations. Sponsors help us keep the stories generous — essays, maps, and code released openly so
+          anyone can learn from (or build on) what the ocean teaches.
+        </p>
+      </div>
+
+      <div class="intro-grid">
+        <figure class="intro-photo">
+          <img src="photos/introduction_1.jpg" alt="Board prepped on the sand before launch">
+        </figure>
+
+        <figure class="intro-photo">
+          <img src="photos/introduction_2.jpeg" alt="Coastline stretch with offshore trades">
+        </figure>
+      </div>
+
+      <div class="prose">
+        <p>
+          If you’re here to follow along, tap the map on the homepage and ride segment by segment. If you’re here to
+          help, the “Sponsor the Journey” link in the menu keeps fuel in the tank and pages in the logbook.
+        </p>
+      </div>
+
+      <div class="intro-cta">
+        <a class="btn" href="index.html">Back to the live map</a>
+        <a class="btn btn-outline" href="gallery.html">View the Photo Map</a>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer (same as index) -->
+  <footer class="site-footer">
+    <div class="social">
+      <a aria-label="Instagram" href="https://www.instagram.com/drewski1003" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a aria-label="Medium" href="https://medium.com/my-oceanic-odyssey" target="_blank"><i class="fab fa-medium"></i></a>
+      <a aria-label="Substack" href="https://substack.com/@drewburrier" target="_blank"><i class="fas fa-newspaper"></i></a>
+      <a aria-label="LinkedIn" href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a aria-label="Spotify" href="https://open.spotify.com/user/12148616871" target="_blank"><i class="fab fa-spotify"></i></a>
+    </div>
+    <div class="legal">© My Oceanic Odyssey</div>
+  </footer>
+
+  <!-- Drawer controls (a11y-safe; same as index) -->
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const hamburger = document.getElementById('hamburger');
+      const drawer    = document.getElementById('drawer');
+      const closeBtn  = document.getElementById('drawerClose');
+      const backdrop  = document.getElementById('backdrop');
+      const main      = document.querySelector('main');
+      const footer    = document.querySelector('footer');
+
+      let lastFocused = null;
+
+      function setInert(on) {
+        if (on) { main?.setAttribute('inert',''); footer?.setAttribute('inert',''); }
+        else { main?.removeAttribute('inert'); footer?.removeAttribute('inert'); }
+      }
+
+      function openDrawer() {
+        lastFocused = document.activeElement;
+        drawer.hidden = false;
+        backdrop.hidden = false;
+        drawer.classList.add('open');
+        setInert(true);
+        hamburger.setAttribute('aria-expanded','true');
+        closeBtn.focus();
+        document.addEventListener('keydown', trapFocus);
+      }
+
+      function closeDrawer() {
+        (lastFocused || hamburger).focus();
+        drawer.classList.remove('open');
+        drawer.hidden = true;
+        backdrop.hidden = true;
+        setInert(false);
+        hamburger.setAttribute('aria-expanded','false');
+        document.removeEventListener('keydown', trapFocus);
+      }
+
+      function trapFocus(e) {
+        if (e.key !== 'Tab' || drawer.hidden) return;
+        const focusables = drawer.querySelectorAll(
+          'a[href], button:not([disabled]), textarea, input, select, [tabindex]:not([tabindex="-1"])'
+        );
+        if (!focusables.length) return;
+        const first = focusables[0];
+        const last  = focusables[focusables.length - 1];
+        if (e.shiftKey && document.activeElement === first) { e.preventDefault(); last.focus(); }
+        else if (!e.shiftKey && document.activeElement === last) { e.preventDefault(); first.focus(); }
+      }
+
+      hamburger.addEventListener('click', openDrawer);
+      closeBtn.addEventListener('click', closeDrawer);
+      backdrop.addEventListener('click', closeDrawer);
+      document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeDrawer(); });
+    });
+  </script>
 </body>
-   <!-- Bottom Banner -->
-<div class="banner">
-    <div class="hamburger-menu" onclick="toggleMenu()">
-        &#9776; <!-- Hamburger Icon -->
-    </div>
-    <div id="planning-tools" class="planning-tools">
-        <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
-       
-        <div class="links-container">
-            <h2>Open Oceanography</h2>
-            <a href="science.html">Main Page</a>
-            <h2>Photo Gallery</h2>
-             <a href="gallery.html">Photo Map</a> <!-- New link to the gallery -->
-             <h2>Planning Tools</h2>
-            <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
-            <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
-        </div>
-    </div>
-     <div class="social-media-links">
-            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://medium.com/my-oceanic-odyssey" target="_blank" aria-label="Medium">
-            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
-            </a>
-
-            <a href="https://substack.com/@drewburrier" target="_blank" aria-label="Substack">
-            <i class="fas fa-newspaper"></i>  <!-- Replace with an appropriate Substack icon if needed -->
-            </a>
-            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <!--  <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
-                <i class="fab fa-strava"></i>
-            </a> -->
-             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
-                <i class="fab fa-spotify"></i>
-            </a>
-
-        </div>
-</div>
-
-
-
-
-
-<script src="strava_api.js"></script>
 </html>
 
