--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
   <!-- Vendor JS (keep your map logic intact) -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin></script>
   <script src="Polyline.encoded.js"></script>
+  <!-- Turf BEFORE your map logic -->
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6.5.0/turf.min.js" crossorigin="anonymous"></script>
 
   <!-- Your existing map/data scripts -->
   <script src="coastline_oahu_linestring.js"></script>
