--- a/introduction.html
+++ b/introduction.html
@@ -71,7 +71,7 @@
       <a href="freelance.html">Work With Me</a>
       <a class="sponsor-cta" href="support.html">Sponsor the Journey</a>
     </div>
-    
+
     <div class="drawer-section">
       <h3>Planning Tools</h3>
       <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank" rel="noopener">Windy.com</a>
@@ -107,7 +107,11 @@
         </a>
       </div>
     </section>
-
+      <div class="intro-grid">
+        <figure class="intro-photo">
+          <img src="photos/introduction_1.jpg" alt="Board prepped on the sand before launch">
+        </figure>
+        </div>
     <!-- Story + images -->
     <section class="card intro-body">
       <div class="prose">
@@ -123,11 +127,8 @@
         </p>
       </div>
 
-      <div class="intro-grid">
-        <figure class="intro-photo">
-          <img src="photos/introduction_1.jpg" alt="Board prepped on the sand before launch">
-        </figure>
 
+      <div class="intro-grid">
         <figure class="intro-photo">
           <img src="photos/introduction_2.jpeg" alt="Coastline stretch with offshore trades">
         </figure>
