--- a/science.html
+++ b/science.html
@@ -215,6 +215,33 @@
       </p>
     </section>
   </main>
+<!-- Long watch: Thesis Defense, placed below the topics -->
+<section class="card" id="thesis-defense" style="padding: clamp(18px,3.6vw,28px);">
+  <h2 style="margin:0 0 10px; font-size:20px;">
+    If you have an hour to kill this is NOT the worst explanation of internal waves ever recorded
+  </h2>
+
+  <div class="prose" style="margin:0 0 10px; color:var(--muted);">
+    <p style="margin:0;">
+      Watch my thesis defense: THE INTERNAL WAVE DYNAMICS OF BARKLEY SUBMARINE CANYON.
+    </p>
+  </div>
+
+  <div class="video-wrap" aria-label="Embedded video player for thesis defense"
+       style="position:relative; width:100%; aspect-ratio:16 / 9; background:rgba(255,255,255,.04); border:1px solid var(--stroke); border-radius:12px; overflow:hidden; box-shadow:var(--shadow);">
+    <iframe
+      src="https://www.youtube.com/embed/WBj7cJQoSZE"
+      title="Thesis Defense"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+      loading="lazy"
+      style="position:absolute; inset:0; width:100%; height:100%; border:0;"></iframe>
+  </div>
+
+  <div style="display:flex; gap:8px; flex-wrap:wrap; margin-top:10px;">
+    <a class="btn" href="https://www.youtube.com/watch?v=WBj7cJQoSZE" target="_blank" rel="noopener">Open on YouTube</a>
+  </div>
+</section>
 
   <!-- Shared footer -->
   <footer class="site-footer">
